Fixed slider text alignment when it's short

--- a/web/css/layout/_pagebuilder.less
+++ b/web/css/layout/_pagebuilder.less
@@ -162,6 +162,7 @@
 
         &:not(.pagebuilder-poster-overlay) {
             max-width: 540px;
+            width: 100%;
         }
 
         [data-appearance='collage-centered'] & {
